@@ -1,26 +1,27 @@
 00e9fcf4388f00b1ce1e5a035c99b24e *cleanup
 d1a18afec85eef22621eecee70b96ba3 *configure
 7a6d0c4fc525c3c08de6e4b540759b7a *DESCRIPTION
-f669b757156c3e0b734a7cdd3f2a1ade *inst/NEWS.Rd
+90b8e85cffb6d982cfc0f28eb6c96241 *inst/NEWS.Rd
 7f3c323c9e1d55ca0f6f2cb3b63475d8 *LICENSE
+42260ab34a8d4673a785028553e89463 *man/countNA.Rd
 05d7db1df5f7fcff0451cca69e882275 *man/fpos.Rd
 c495d3470c465d685c0a6afc3052447d *man/iif.Rd
 b98c5f5615a97e3bf9578ea556f812bf *man/nif.Rd
-e86c1a37be963ef2c7bd3bc089ab80cd *man/psum.Rd
+8cdf6bf995b062625f5c8726a4ba7753 *man/psum.Rd
 a8f88fa29539089c7013cbd7ffec5f75 *man/setlevels.Rd
 8e3284d163f8e7e15313d478cbd659e6 *man/topn.Rd
 e926b9000dfefbfdd1821bbc63860c05 *man/vswitch.Rd
-4b58f0d9234b7b43861fec6ddeb920d3 *NAMESPACE
-bd2b96f3f894050dbe0bfc2dcf5eb49b *R/call.R
+4a9cdfc660562dd524d90501277be8c2 *NAMESPACE
+aa7aa6ef298ab30a3433273e4b99b1c5 *R/call.R
 340d98489e5ba33f868d6af21e8b53ff *README.md
 ccad12dd2b7f48bd897880b7bbf2b01c *src/fpos.c
 6309197edd4d7da2408602b26f4d1b23 *src/iif.c
-9974d1e72b6ff801fc2feb0dc36209b7 *src/init.c
-af231a0e4890e3593dd0e6cb6e573e4b *src/kit.h
+7d089c949253c71070aff817f18d634a *src/init.c
+a135512a2d35177e37d5069bfbb07090 *src/kit.h
 cde2535a36d0ee0e2c04232c0593da84 *src/Makevars.in
 47af37b6e045426e44e511fce458c6fe *src/Makevars.win
 f5b7341e38ee5d60bf4d2780939a77a2 *src/nif.c
-d6dbb6ea814732361cfcd321cccba94c *src/psum.c
+a7424fddf77f2557b40e29cebfdc9848 *src/psum.c
 7c240b3f1878037dcdd4c7bd1734193f *src/topn.c
-49bf24bf52de17bbdb0097c9668475f9 *src/utils.c
+4f38adc779555d600a941f083b1136d3 *src/utils.c
 a2666bd9c9c0f677b884b54fee84e252 *src/vswitch.c
