@@ -1,3 +1,3 @@
 useDynLib(kit, .registration = TRUE)
 
-export(fpos, iif, nif, pall, pany, pmean, pprod, psum, setlevels, topn, vswitch)
+export(countNA, fpos, iif, nif, pall, pany, pmean, pprod, psum, setlevels, topn, vswitch)
