@@ -4,13 +4,16 @@
 
 \newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
-\section{version 0.0.2 (2020-05-09)}{
+\section{version 0.0.2 (2020-05-22)}{
   \subsection{New Features}{
     \itemize{
       \item Function \code{\strong{pmean}(..., na.rm=FALSE)}, \code{\strong{pall}(..., na.rm=FALSE)} and
       \code{\strong{pany}(..., na.rm=FALSE)}, implemented in C, are similar to already available function 
       \code{psum} and \code{pprod}. These functions respectively apply base \R functions \code{mean}, \code{all} 
       and \code{any} element-wise. For more details, benchmarks and help, please see \code{?kit::pmean}.
+
+	  \item Function \code{\strong{countNA}(x)}, implemented in C, to simply count the number of NA. 
+	  For more details, please see \code{?kit::countNA}.
     }
   }
   \subsection{Bug Fixes}{
@@ -20,7 +23,7 @@
       
       \item Fix some \code{NA} edge cases for \code{pprod} and \code{psum} so these functions behave more
       like base \R function \code{prod} and \code{sum}.
-	  
+
       \item Fix installation errors for version of R (<3.5.0).
     }
   }
